# streamlit-duckdb-analysis

./: README.md  pyproject.toml
app/: app.py
scripts/: analyze_data.py  download_data.py
